[workspace]
members = ["ic10lsp_wasm", "ic10emu_wasm", "ic10emu", "xtask"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
[profile.dev]
opt-level = 1


[patch.crates-io]
onig_sys = { git = "https://github.com/rust-onig/rust-onig", revision = "fa90c0e97e90a056af89f183b23cd417b59ee6a2" }
