[workspace]
members = [
  "ic10lsp_wasm",
  "stationeers_data",
  "ic10emu",
  "ic10emu_wasm",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
[profile.dev]
opt-level = 1
