[package]
name = "ic10emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]


[dependencies]
const-crc32 = "1.3.0"
phf = "0.11.2"
regex = "1.10.3"
rust-sitter = "0.4.1"
strum_macros = "0.26.2"


[build-dependencies]
convert_case = "0.6.0"
phf_codegen = "0.11.2"
regex = "1.10.3"
rust-sitter-tool = "0.4.1"

