[package]
name = "ic10emu"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]


[dependencies]
const-crc32 = "1.3.0"
itertools = "0.12.1"
macro_rules_attribute = "0.2.0"
paste = "1.0.14"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
regex = "1.10.3"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_with = "3.7.0"
strum = { version = "0.26.2", features = ["derive", "phf", "strum_macros"] }
strum_macros = "0.26.2"
thiserror = "1.0.58"
time = { version = "0.3.34", features = [
    "formatting",
    "serde",
    "local-offset",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
time = { version = "0.3.34", features = [
    "formatting",
    "serde",
    "local-offset",
    "wasm-bindgen",
] }

[dev-dependencies]
serde_json = "1.0.117"
