
[package]
name = "ic10emu_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
ic10emu = { path = "../ic10emu" }
console_error_panic_hook = {version = "0.1.7", optional = true}
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["WritableStream", "console"] }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = { version = "0.4.30", features = [
  "futures-core-03-stream",
] }
wasm-streams = "0.4"
serde-wasm-bindgen = "0.6.5"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
tsify = { version = "0.4.5", default-Vfeatures = false, features = ["js", "wasm-bindgen"] }
thiserror = "1.0.58"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
