
[package]
name = "ic10emu_wasm"
version.workspace = true
edition.workspace = true

[dependencies]
ic10emu = { path = "../ic10emu" }
console_error_panic_hook = {version = "0.1.7", optional = true}
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["WritableStream", "console"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = { version = "0.4.42", features = [
  "futures-core-03-stream",
] }
wasm-streams = "0.4"
serde-wasm-bindgen = "0.6.5"
itertools = "0.13.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_with = "3.8.1"
tsify = { version = "0.4.5", default-features = false, features = ["js", "wasm-bindgen"] }
thiserror = "1.0.61"

[build-dependencies]
ic10emu = { path = "../ic10emu" }
strum = { version = "0.26.2"}
itertools = "0.13.0"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
