
[package]
name = "ic10emu_wasm"
version.workspace = true
edition.workspace = true

[dependencies]
stationeers_data = { path = "../stationeers_data", features = ["tsify"] }
ic10emu = { path = "../ic10emu", features = ["tsify"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["WritableStream", "console"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = { version = "0.4.42", features = [
  "futures-core-03-stream",
] }
wasm-streams = "0.4"
serde-wasm-bindgen = "0.6.5"
serde_path_to_error = "0.1.16"
serde_ignored = "0.1.10"
color-eyre = "0.6.3"
itertools = "0.13.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_with = "3.8.1"
tsify = { version = "0.4.5", features = ["json"] }
thiserror = "1.0.61"
serde_derive = "1.0.203"
serde_json = "1.0.117"

[build-dependencies]
ic10emu = { path = "../ic10emu" }
strum = { version = "0.26.2" }
itertools = "0.13.0"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
prefab_database = [
  "ic10emu/prefab_database",
  "stationeers_data/prefab_database",
]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = false
# Should we omit the default import path?
omit-default-module-path = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false
