[package]
name = "ic10lsp_wasm"
version = "0.1.0"
edition = "2021"

# [features]
# default = ["tower-lsp/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.21"
js-sys = "0.3.69"
web-sys = {version = "0.3.69", features = ["WritableStream", "console"]}
tokio = { version = "1.26.0", features = ["sync"] }
tower-lsp = { version = "0.20.0", default-features = false, features = ["runtime-agnostic"]}
# tree-sitter = { version = "0.9.0", package = "tree-sitter-facade" }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = { version = "0.4.30", features = ["futures-core-03-stream"] }
wasm-streams = "0.4"
# web-tree-sitter-sys = "1.3"
ic10lsp = { git = "https://github.com/Ryex/ic10lsp.git", branch = "wasm" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[build]
target = "wasm32-unknown-unknown"